src/objects/Apttus_Approval__FormulaField__c.object
<CustomObject>
    <description>Represents a formula field used in approval rules</description>
    <fields>
        <fullName>Apttus_Approval__BusinessObject__c</fullName>
        <description>The business object which provides the context for the field</description>
        <inlineHelpText>The business object which provides the context for the field</inlineHelpText>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Apttus__APTS_Agreement__c</fullName>
                </value>
                <value>
                    <fullName>Apttus__AgreementLineItem__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Description__c</fullName>
        <description>The description for the field</description>
        <inlineHelpText>The description for the field</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Formula__c</fullName>
        <description>The field formula</description>
        <inlineHelpText>The field formula</inlineHelpText>
        <label>Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Type__c</fullName>
        <description>The type of formula field</description>
        <inlineHelpText>The type of formula field</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Relationship</fullName>
                    <default>true</default>
                    <label>Relationship</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Formula Field (Approvals)</label>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formula Fields (Approvals)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>